# hwo2014bot

./: Bot.hs  Brain.hs  CarPositionsModel.hs  GameInitModel.hs  Main.hs  README.md  hwo2014bot.cabal
